--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,8 @@
 # dependencies
 /node_modules
 
-# next.js
-/.next/
-/out/
-
 # production
+/dist
 /build
 
 # debug
@@ -17,11 +14,21 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files
-.env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# editor
+.vscode/*
+!.vscode/extensions.json
+.idea
 
 # vercel
-.vercel
+.DS_Store
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+
+# vite
+*.local
